# fujiya

./: .gitignore  Cargo.toml  README.md  build.rs
crates/fujiya-assets/: Cargo.toml
crates/fujiya-graph/: Cargo.toml
crates/fujiya-graph/src/: lib.rs
crates/fujiya-macros/: Cargo.toml
crates/fujiya-physics/: Cargo.toml
crates/fujiya-render/: Cargo.toml  build.rs
crates/fujiya-render/src/: lib.rs
crates/fujiya-render/src/core/: app.rs  command_pool.rs  descriptor_pool.rs  descriptor_set_layout.rs  device.rs  frame_buffers.rs  gpu_buffer.rs  image_views.rs  instance.rs  mod.rs  phys_device.rs  pipeline.rs  queue.rs  render_pass.rs  shaders.rs  surface.rs  swapchain.rs  sync.rs  utils.rs
crates/fujiya-render/src/render/: mod.rs  render_context.rs
crates/fujiya-render/src/render/graphics_device/: app.rs  device.rs  instance.rs  mod.rs  phys_dev.rs  queue_family.rs  window.rs
crates/fujiya-render/src/render/standart_pipeline/: mod.rs  standart_pipeline.rs
crates/fujiya-render/src/render/window_manager/: frame_buffers.rs  image_views.rs  mod.rs  present_formats.rs  present_modes.rs  render_pass.rs  surface.rs  swapchain.rs  window.rs  window_manager.rs
crates/fujiya-sound/: Cargo.toml
crates/fujiya-ui/: Cargo.toml
crates/kajiya-rg/: Cargo.toml
shaders/: frag.spv  triangle.frag  triangle.vert  v.spv
shared/shaders/: build.bat  ray-tracing.frag  triangle.frag  triangle.vert
src/: app.rs  command_pool.rs  device.rs  frame_buffers.rs  image_views.rs  instance.rs  main.rs  phys_device.rs  pipeline.rs  queue.rs  queue_family.rs  render_pass.rs  shaders.rs  surface.rs  swapchain.rs  utils.rs
src/core/: device.rs  instance.rs  mod.rs  phys_device.rs  pipeline.rs  queue.rs  shaders.rs  surface.rs  swapchain.rs  sync.rs  utils.rs
(+6 files in other folders)
